# vibe_coding

./: MERGE_SUMMARY.md  vibe_coding.py
corpus-analyzer/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  test_debug.py
corpus-analyzer/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
corpus-analyzer/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
corpus-analyzer/.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v2-REQUIREMENTS.md  v2-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3-REQUIREMENTS.md  v3-ROADMAP.md
corpus-analyzer/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
corpus-analyzer/.windsurf/: GPU_OPTIMIZER_PYPROJECT.toml  POSE_ANALYZER_PYPROJECT.toml  mcp_config.json
corpus-analyzer/.windsurf/rules/: 01-python-best-practices.md  01-python-main.md  description.md  python-general-rules.md
corpus-analyzer/.windsurf/workflows/: ai-assistant.md  api-mock.md  feature-development.md  improve-agent.md  load.md  ml-pipeline.md  save.md  task-m.md
corpus-analyzer/docs/plans/: 2026-02-24-v1.2-graph-linker.md
corpus-analyzer/scripts/: run_rewrite_dry_run.py
corpus-analyzer/source_docs/: architecture_2.md  unknown_sample.md
corpus-analyzer/src/corpus/: __init__.py
corpus-analyzer/src/corpus_analyzer/: __init__.py  cli.py  config.py
corpus-analyzer/test_output/reference/: 134_rewritten.md  144_rewritten.md  145_rewritten.md  17_rewritten.md  1_rewritten.md  37_rewritten.md  41_rewritten.md  51_rewritten.md  64_rewritten.md  66_rewritten.md  6_rewritten.md  AGENTS_rewritten.md  API_REFERENCE_rewritten.md  MCP_Playwright_rewritten.md  MCP_Tavily_rewritten.md  PARALLEL_INDEXING_PLAN_rewritten.md  PM_AGENT_COMPARISON_rewritten.md  QUALITY_COMPARISON_rewritten.md  README_rewritten.md  SKILL_rewritten.md  TRIGGER_TYPES_rewritten.md  VERIFICATION_SUMMARY_rewritten.md  WORKFLOW_METRICS_SCHEMA_rewritten.md  WinFormsExpert.agent_rewritten.md  add-educational-comments.prompt_rewritten.md  advanced-aws-pentesting_rewritten.md  advanced-cloud-scripts_rewritten.md  advanced-event-handler-refs_rewritten.md  (+129 more)
corpus-analyzer/tests/: conftest.py
ghrepos/agent-discovery-system/: .coverage  AGENTS.md  ARCHITECTURE.md  CLAUDE_VALIDATION_TESTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  QA_SCORING_RESULTS.md  QUICK_REFERENCE.md  README.md  TASK_MDO_EXECUTION_SUMMARY.txt  ULTIMATE_AGENT_IMPROVEMENT.md  package.json  pyproject.toml  qa_testing_framework.md  uv.lock.bak  validate_phase4_deployment.sh
(+414 files in other folders)
